Fix error in Get-BcContainerAppInfo in NextMajor
Check-BcContainerHelperPermissions didn't work on PS7
Issue #3379 Adding -installCertificateOnHost to New-BcContainer didn't work when running PS7 (silently failed)
Issue #3376 Regression - Download-Artifacts stopped downloading pre-requisites
Issue 3371 Unable to get companyname from Windows Users when running tests

6.0.6
Include Microsoft_Business Foundation Test Libraries.app when importing test libraries (and tests)
Include Microsoft_System Application Test.app and Microsoft_Business Foundation Tests.app when importing tests
Bug when running Publish-BcContainerApp against a cloud container ($authContext not defined)
Remove the need for a Container when using Replace-DependenciesInAppFile (containername parameter is now obsolete)
Two new parameters on Sort-AppFilesByDependencies (includeSystemDependencies and includeDependencyVersion)
Add Public Microsoft NuGet Feeds as settings constants
Fix issues in Download-BcNuGetPackageToFolder, where extensive amounts of NuGet searches was performed to locate packages
Download-BcNuGetPackageToFolder now returns an array of apps downloaded instead of True/False
JIT install PowerShell 7 in container when using BC version 24 or above (if not already installed in container)
JIT install ASP.NET Core 1.1 when using BC 15 - 18 on Generic 1.0.2.15 or above

6.0.5
Proof of concept support for hosting artifacts as Universal Packages
Add new function Get-BcNuGetPackageId to get a NuGet Package Id based on publisher, name, id and version
Issue 3301 Run-AlValidation fails running AppsourceCop "Could not load type 'System.Object' from assembly 'System.Private.CoreLib'
Give better error message if GitHub CLI, GIT or dotnet is not installed
Issue 3301 Run-AlValidation fails running AppsourceCop "Could not load type 'System.Object' from assembly 'System.Private.CoreLib' (Regression in 6.0.4) 
Issue 3313 Strange error in Copy-BcEnvironment