@@ -8,6 +8,7 @@ Check-BcContainerHelperPermissions didn't work on PS7
 Issue #3379 Adding -installCertificateOnHost to New-BcContainer didn't work when running PS7 (silently failed)
 Issue #3376 Regression - Download-Artifacts stopped downloading pre-requisites
 Issue 3371 Unable to get companyname from Windows Users when running tests
+Disallow invoking Run-ALPipeline with `keepContainer` without specifying credentials to use
 
 6.0.6
 Include Microsoft_Business Foundation Test Libraries.app when importing test libraries (and tests)
@@ -26,7 +27,7 @@ Proof of concept support for hosting artifacts as Universal Packages
 Add new function Get-BcNuGetPackageId to get a NuGet Package Id based on publisher, name, id and version
 Issue 3301 Run-AlValidation fails running AppsourceCop "Could not load type 'System.Object' from assembly 'System.Private.CoreLib'
 Give better error message if GitHub CLI, GIT or dotnet is not installed
-Issue 3301 Run-AlValidation fails running AppsourceCop "Could not load type 'System.Object' from assembly 'System.Private.CoreLib' (Regression in 6.0.4) 
+Issue 3301 Run-AlValidation fails running AppsourceCop "Could not load type 'System.Object' from assembly 'System.Private.CoreLib' (Regression in 6.0.4)
 Issue 3313 Strange error in Copy-BcEnvironment
 Issue 3318 Download-BcNuGetPackageToFolder fails when no dependencies defined
 Add Stacktrace output to high level functions Download-BcNuGetPackageToFolder and Get-BcNuGetPackage
